[package]
name = "reef-primitives"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.101",default-features = false,features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len"] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-io = { workspace = true, default-features = false }
ethereum-types = { version ="0.15.0", default-features = false,features = ["scale-info","codec"]  }
evm = { git = "https://github.com/reef-chain/reef-chain-evm-pallet",branch = "feat/version-stable2506", default-features = false, features = ["with-codec"] }

[dev-dependencies]
frame-support = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"scale-info/std",
	"sp-io/std",
	"evm/std",
	"evm/std",
	"ethereum-types/std",
	"evm/with-serde",
]
