[package]
authors = ['Reef <https://reef.io>']
edition = '2021'
homepage = 'https://reef.io'
license = 'Unlicense'
name = 'reef-runtime'
repository = 'https://github.com/reef-defi/reef-chain'
version = '4.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { workspace = true, default-features = false }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }
smallvec = "1.11.0"
hex-literal = { optional = true, version = '0.4.1' }
log = { workspace = true, default-features = false }
serde_json = { features = [
	"alloc",
	"arbitrary_precision",
], version = "1.0.132", default-features = false }

# Substrate dependencies
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-metadata-hash-extension = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-core-fellowship = { workspace = true, default-features = false }
pallet-delegated-staking = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-skip-feeless-payment = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }

# # NPoS
pallet-session = { workspace = true, default-features = false, features = [
	"historical",
] }
pallet-session-benchmarking = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-salary = { workspace = true, default-features = false }
pallet-safe-mode = { workspace = true, default-features = false }
pallet-tx-pause = { workspace = true, default-features = false }
pallet-staking-runtime-api = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-bounties = { workspace = true, default-features = false }
pallet-child-bounties = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-elections-phragmen = { workspace = true, default-features = false }
pallet-election-provider-multi-phase = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-parameters = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-assets-precompiles = { workspace = true, default-features = false }
pallet-asset-tx-payment = { workspace = true, default-features = false }
pallet-asset-rewards = { workspace = true, default-features = false }
pallet-asset-rate = { workspace = true, default-features = false }
pallet-asset-conversion = { workspace = true, default-features = false }
pallet-asset-conversion-ops = { workspace = true, default-features = false }
pallet-asset-conversion-tx-payment = { workspace = true, default-features = false }
pallet-assets-freezer = { workspace = true, default-features = false }
pallet-assets-holder = { workspace = true, default-features = false }
pallet-referenda = { workspace = true, default-features = false }
pallet-conviction-voting = { workspace = true, default-features = false }
pallet-nomination-pools = { workspace = true, default-features = false }
pallet-nomination-pools-runtime-api = { workspace = true, default-features = false }
pallet-nomination-pools-benchmarking = { workspace = true, default-features = false }
pallet-bags-list = { workspace = true, default-features = false }
pallet-ranked-collective = { workspace = true, default-features = false }
pallet-revive = { workspace = true, default-features = false }
pallet-revive-proc-macro = { workspace = true, default-features = false }
pallet-revive-uapi = { workspace = true, default-features = false }

# # PoC
pallet-collective = { workspace = true, default-features = false }
module-poc = { path = "../modules/poc", default-features = false }

# # local dependencies
orml-traits = { path = "../orml/traits", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-authority = { path = "../orml/authority", default-features = false }

module-currencies = { path = "../modules/currencies", default-features = false }
module-evm = { path = "../modules/evm", default-features = false }
module-evm-accounts = { path = "../modules/evm-accounts", default-features = false }
module-evm-bridge = { path = "../modules/evm-bridge", default-features = false }
module-evm-rpc-runtime-api = { path = "../modules/evm/rpc/runtime_api", default-features = false }
module-transaction-payment = { path = "../modules/transaction_payment", default-features = false }
module-support = { path = "../modules/support", default-features = false }

primitives = { package = "reef-primitives", path = "../primitives", default-features = false }
runtime-common = { path = "common", default-features = false }

[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	"codec/std",
	"scale-info/std",
	"serde_json/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-metadata-hash-extension/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"pallet-balances/std",
	"pallet-bags-list/std",
	"pallet-core-fellowship/std",
	"pallet-delegated-staking/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-utility/std",
	"pallet-multisig/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-parameters/std",
	"pallet-skip-feeless-payment/std",
	"pallet-treasury/std",
	"pallet-assets/std",
	"pallet-assets-precompiles/std",
	"pallet-asset-tx-payment/std",
	"pallet-asset-rewards/std",
	"pallet-asset-rate/std",
	"pallet-asset-conversion/std",
	"pallet-asset-conversion-ops/std",
	"pallet-asset-conversion-tx-payment/std",
	"pallet-assets-freezer/std",
	"pallet-assets-holder/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-referenda/std",
	"pallet-conviction-voting/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-staking-runtime-api/std",
	"pallet-salary/std",
	"pallet-collective/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"sp-consensus-babe/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-im-online/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-offences/std",
	"pallet-identity/std",
	"pallet-ranked-collective/std",
	"pallet-revive/std",
	"pallet-nomination-pools/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools-benchmarking/std",
	"pallet-tx-pause/std",
	"pallet-safe-mode/std",

	# # Primitives
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-genesis-builder/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-authority/std",

	"module-poc/std",
	"module-currencies/std",
	"module-evm/std",
	"module-evm-accounts/std",
	"module-evm-bridge/std",
	"module-transaction-payment/std",
	"module-support/std",
	"primitives/std",
	"runtime-common/std",
	"module-evm-rpc-runtime-api/std",
]
with-ethereum-compatibility = [
	"module-evm/with-ethereum-compatibility",
	"runtime-common/with-ethereum-compatibility",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"libsecp256k1/hmac",
	"module-poc/runtime-benchmarks",
	"orml-authority/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-staking/try-runtime",
]
