[package]
name = "module-currencies"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
	"derive",
] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

module-evm = { path = "../evm", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
module-evm = { path = "../evm", default-features = false }
module-evm-bridge = { path = "../evm-bridge", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"scale-info/std",
	"frame-system/std",
	"module-evm/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"support/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"module-evm-bridge/std",
	"orml-tokens/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
