[package]
name = "module-evm-accounts"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

frame-support = { workspace = true ,default-features = false }
frame-system = { workspace = true ,default-features = false }
sp-core = { workspace = true ,default-features = false }
sp-io = { workspace = true ,default-features = false }
sp-runtime = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true ,default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"orml-traits/std",
	"module-support/std",
	"pallet-balances/std",
	"orml-currencies/std",
	"orml-tokens/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
