[package]
name = "module-evm-bridge"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false} 
frame-system = { workspace = true, default-features = false} 
sp-core = { workspace = true, default-features = false} 
sp-runtime = { workspace = true, default-features = false} 
sp-std = { workspace = true, default-features = false} 
sp-io = { workspace = true, default-features = false} 
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp", "byteorder"] }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.2.1"
ethereum-types = { version = "0.15.0", default-features = false,features = ["scale-info","codec"]  }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
module-evm = { path = "../evm", default-features = false }
hex-literal = { version = "0.3.1" }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false} 
pallet-timestamp = { workspace = true, default-features = false} 

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"ethereum-types/std",
	"primitives/std",
	"primitive-types/std",
	"support/std",
	"module-evm/std",
]
